# userapi

./: README.md  deploy  fastapi.md  local
src/: main.py  pyproject.toml  requirements.txt
src/api/: app.py  config.local.py  db.py  dependence.py  urls.py
src/api/auth/: model.py  readme.md  router_admin.py  router_user.py
src/api/city/: model.py  router.py
src/api/static/: png2ico  show-result.html
test/curl/: authapi.sh
test/curl/local/: admin-list-user  client.token  user-me
test/curl/railway/: admin-list-user  admin-new-user  init-db  user-get
