[tool.poetry]
name = "goose"
version = "0.1.0"
description = "This is used to show information for a stock"
authors = ["Leon <leon@gmail.com>"]
license = "MIT"
exclude = [
    "api/config.py"
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
